tests/ui/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for struct `clap::args::arg::Arg<'_, '_>` in the current scope
  --> $DIR/non_existent_attr.rs:14:24
   |
14 |     #[structopt(short, non_existing_attribute = 1)]
   |                        ^^^^^^^^^^^^^^^^^^^^^^ method not found in `clap::args::arg::Arg<'_, '_>`
